--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -147,8 +147,8 @@ body {
     cursor: pointer;
     transition: background-color 300ms linear, color 300ms linear;
   
-    :hover,
-    :focus {
+    .hover,
+    .focus {
       background-color: #0f3443;
       color: #ffffff;
     }
